@@ -297,6 +297,9 @@ Other Changes
   ERROR to WARN for zkcli.{sh,cmd} only.
   (Oliver Schrenk, Tim Potter, Uwe Schindler, shalin)
 
+* SOLR-7227: Ship Solr with the Web application directory exploded into server/solr-webapp,
+  solr.war is no longer included in the distribution bundles. (Timothy Potter)
+
 ==================  5.2.1 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
